8.6.2 (30-01-2023)
- Refactor: Replace reference for FinantialDocumentEntry::setFinantialDocument by FinantialDocumentEntry::addToFinantialDocument
- Bug Fix: Consider totally exempted debit entries, created in CreateDebtsStrategy, which might be exempted due to reservation taxes

8.6.1 (26-01-2023)
- Refactor: method to edit course cost function

8.6.0 (04-01-2023)
- Refactor: Split TreasuryEvent::invokeSettlementCallbacks method in two, one receiving the settlement note and other the treasury exemption

8.5.4 (15-12-2022)
- Improvement: Check if there is already an active customer with the same fiscal number, only within the instances of the subclasses AdhocCustomer and PersonCustomer
- Improvement: Allow set code in Reservation Tax, in creation and edition

8.5.3 (12-12-2022)
- Bug Fix: Support delete reservation tax
- Refactor: Remove association of product and finantial entity with the reservation tax event target

8.5.2 (08-12-2022)
- Bug Fix: Protect with try-catch for NPE, the customer identification and name retrieval in getting the error description, in the debt report
- Improvement: Discount tuition amount from other treasury events with exemption

8.5.1 (23-11-2022)
- Refactor: Replace references of RegistrationStateType for RegistrationStateTypeEnum

8.5.0 (10-11-2022)
- Improvement: Support assign payor debt account to tuition installments

8.4.9 (03-11-2022)
- Improvement: Allow the creation of individual tuition payment plan installments
- Refactor: Replace references of RegistrationStateType for RegistrationStateTypeEnum
- Refactor: Method to create custom academic debts for default finantial entity

8.4.8 (20-10-2022)
- Refactor: Remove references of AdministrativeOffice in AcademicTariff and FinantialEntity

8.4.7 (14-10-2022)
- Refactor: Remove references of AdministrativeOffice in AcademicTariff

8.4.6 (23-09-2022)