@@ -1,3 +1,5 @@
+- Bug Fix: In exempting tuition installments, when creating tuition debts, consider only treasury events of the same degree as the registration
+
 8.6.2 (30-01-2023)
 - Refactor: Replace reference for FinantialDocumentEntry::setFinantialDocument by FinantialDocumentEntry::addToFinantialDocument
 - Bug Fix: Consider totally exempted debit entries, created in CreateDebtsStrategy, which might be exempted due to reservation taxes
